Add existingConfigMap to metallb config

--- a/infrastructure/metallb/metallb.yaml
+++ b/infrastructure/metallb/metallb.yaml
@@ -8,3 +8,5 @@ spec:
     repository: https://charts.bitnami.com/bitnami
     name: metallb
     version: 0.1.28
+  values:
+    existingConfigMap: config
