Change hello-kubernetes service to LoadBalancer

--- a/hello-kubernetes.yaml
+++ b/hello-kubernetes.yaml
@@ -4,9 +4,9 @@ kind: Service
 metadata:
   name: hello-kubernetes
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-  - port: 8080
+  - port: 80
     targetPort: 8080
   selector:
     app: hello-kubernetes
