--- a/hello-kubernetes.yaml
+++ b/hello-kubernetes.yaml
@@ -30,7 +30,7 @@ spec:
         ports:
         - containerPort: 8080
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-hello-kubernetes
