external-dns: exclude jitsi.bo0tzz.me

--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -15,3 +15,5 @@ spec:
     cloudflare:
       proxied: false
       secretName: cloudflare-api-token-secret
+    excludeDomains:
+      - jitsi.bo0tzz.me
