--- a/jitsi/service.yaml
+++ b/jitsi/service.yaml
@@ -38,6 +38,9 @@ kind: Ingress
 metadata:
   name: jitsi
   namespace: jitsi
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
   - hosts: 
