Expose jvb on TCP/4443

--- a/jitsi/service.yaml
+++ b/jitsi/service.yaml
@@ -12,6 +12,10 @@ spec:
     protocol: UDP
     targetPort: 30300
     nodePort: 30300
+  - port: 4443
+    protocol: TCP
+    targetPort: 4443
+    nodePort: 4443
   selector:
     k8s-app: jitsi
 ---
@@ -53,4 +57,4 @@ spec:
       - path: /
         backend:
           serviceName: web
-          servicePort: https
+          servicePort: http
