--- a/infrastructure/sealed-secrets/sealed-secrets.yaml
+++ b/infrastructure/sealed-secrets/sealed-secrets.yaml
@@ -5,6 +5,6 @@ metadata:
   namespace: sealed-secrets
 spec:
   chart:
-    repository: https://kubernetes-charts.storage.googleapis.com
+    repository: https://bitnami-labs.github.io/sealed-secrets
     name: sealed-secrets
-    version: 1.12.0
+    version: 1.13.2-r2
