Add nextcloud_url config value

--- a/nextcloud/nc-config.yaml
+++ b/nextcloud/nc-config.yaml
@@ -9,3 +9,4 @@ data:
   NEXTCLOUD_UPLOAD_MAX_FILESIZE: 4G
   NEXTCLOUD_MAX_FILE_UPLOADS: "20"
   MYSQL_HOST: mariadb
+  NEXTCLOUD_URL: https://nc.bo0tzz.me
