--- a/nextcloud/nc-config.yaml
+++ b/nextcloud/nc-config.yaml
@@ -8,5 +8,5 @@ data:
   DEBUG: "false"
   NEXTCLOUD_UPLOAD_MAX_FILESIZE: 4G
   NEXTCLOUD_MAX_FILE_UPLOADS: "20"
-  MYSQL_HOST: mariadb
+  POSTGRES_HOST: 192.168.1.2
   NEXTCLOUD_URL: https://nc.bo0tzz.me
