--- a/jitsi/deployment.yaml
+++ b/jitsi/deployment.yaml
@@ -21,126 +21,36 @@ spec:
         - name: jicofo
           image: jitsi/jicofo:stable-5076
           imagePullPolicy: Always
-          env:
-            - name: XMPP_SERVER
-              value: localhost
-            - name: XMPP_DOMAIN
-              value: meet.jitsi
-            - name: XMPP_AUTH_DOMAIN
-              value: auth.meet.jitsi
-            - name: XMPP_INTERNAL_MUC_DOMAIN
-              value: internal-muc.meet.jitsi
-            - name: JICOFO_COMPONENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JICOFO_COMPONENT_SECRET
-            - name: JICOFO_AUTH_USER
-              value: focus
-            - name: JICOFO_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JICOFO_AUTH_PASSWORD
-            - name: TZ
-              value: Europe/Amsterdam
-            - name: JVB_BREWERY_MUC
-              value: jvbbrewery
+          envFrom:
+            - secretRef:
+                name: jitsi-config
+            - configMapRef:
+                name: shared-config
         - name: prosody
           image: jitsi/prosody:stable-5076
           imagePullPolicy: Always
-          env:
-            - name: XMPP_DOMAIN
-              value: meet.jitsi
-            - name: XMPP_AUTH_DOMAIN
-              value: auth.meet.jitsi
-            - name: XMPP_MUC_DOMAIN
-              value: muc.meet.jitsi
-            - name: XMPP_INTERNAL_MUC_DOMAIN
-              value: internal-muc.meet.jitsi
-            - name: JICOFO_COMPONENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JICOFO_COMPONENT_SECRET
-            - name: JVB_AUTH_USER
-              value: jvb
-            - name: JVB_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JVB_AUTH_PASSWORD
-            - name: JICOFO_AUTH_USER
-              value: focus
-            - name: JICOFO_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JICOFO_AUTH_PASSWORD
-            - name: TZ
-              value: Europe/Amsterdam
-            - name: JVB_TCP_HARVESTER_DISABLED
-              value: "true"
+          envFrom:
+            - secretRef:
+                name: jitsi-config
+            - configMapRef:
+                name: shared-config
         - name: web
           image: jitsi/web:stable-5076
           imagePullPolicy: Always
-          env:
-            - name: XMPP_SERVER
-              value: localhost
-            - name: JICOFO_AUTH_USER
-              value: focus
-            - name: XMPP_DOMAIN
-              value: meet.jitsi
-            - name: XMPP_AUTH_DOMAIN
-              value: auth.meet.jitsi
-            - name: XMPP_INTERNAL_MUC_DOMAIN
-              value: internal-muc.meet.jitsi
-            - name: XMPP_BOSH_URL_BASE
-              value: http://127.0.0.1:5280
-            - name: XMPP_MUC_DOMAIN
-              value: muc.meet.jitsi
-            - name: TZ
-              value: Europe/Amsterdam
-            - name: JVB_TCP_HARVESTER_DISABLED
-              value: "true"
+          envFrom:
+            - configMapRef:
+                name: shared-config
         - name: jvb
           image: jitsi/jvb:stable-5076
           imagePullPolicy: Always
           resources:
             requests:
               cpu: "2"
+          envFrom:
+            - secretRef:
+                name: jitsi-config
+            - configMapRef:
+                name: shared-config
           env:
-            - name: XMPP_SERVER
-              value: localhost
             - name: DOCKER_HOST_ADDRESS
               value: 85.148.132.202
-            - name: XMPP_DOMAIN
-              value: meet.jitsi
-            - name: XMPP_AUTH_DOMAIN
-              value: auth.meet.jitsi
-            - name: XMPP_INTERNAL_MUC_DOMAIN
-              value: internal-muc.meet.jitsi
-            - name: JVB_STUN_SERVERS
-              value: stun.l.google.com:19302,stun1.l.google.com:19302,stun2.l.google.com:19302
-            - name: JICOFO_AUTH_USER
-              value: focus
-            - name: JVB_TCP_HARVESTER_DISABLED
-              value: "true"
-            - name: JVB_AUTH_USER
-              value: jvb
-            - name: JVB_PORT
-              value: "30300"
-            - name: JVB_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JVB_AUTH_PASSWORD
-            - name: JICOFO_AUTH_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: jitsi-config
-                  key: JICOFO_AUTH_PASSWORD
-            - name: JVB_BREWERY_MUC
-              value: jvbbrewery
-            - name: TZ
-              value: Europe/Amsterdam
