--- a/jitsi/shared-config.yaml
+++ b/jitsi/shared-config.yaml
@@ -17,3 +17,10 @@ data:
   JVB_PORT: "30300"
   JVB_BREWERY_MUC: jvbbrewery
   XMPP_BOSH_URL_BASE: http://127.0.0.1:5280
+  ENABLE_RECORDING: "true"
+  JIBRI_RECORDER_USER: jibrirecord
+  JIBRI_RECORDER_PASSWORD: jibrirecordpass
+  JIBRI_XMPP_USER: jibri
+  JIBRI_XMPP_PASSWORD: jibri
+  JIBRI_BREWERY_MUC: jibribrewery
+  ENABLE_PREJOIN_PAGE: "true"
