Add SoundAvailable toleration to jibri

--- a/jitsi/deployment.yaml
+++ b/jitsi/deployment.yaml
@@ -103,3 +103,7 @@ spec:
         - name: shm
           hostPath:
             path: /dev/shm
+      tolerations:
+        - key: "SoundAvailable"
+          operator: "Exists"
+          effect: "NoSchedule"
