--- a/jitsi/secret.yaml
+++ b/jitsi/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: bitnami.com/v1alpha1
 kind: SealedSecret
 metadata:
   creationTimestamp: null
+  # TODO: Rename this
   name: jitsi-config
   namespace: jitsi
 spec:
