Configure sync policy on external-dns so stale records are deleted

--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -12,6 +12,7 @@ spec:
     sources: 
       - ingress
     provider: cloudflare
+    policy: sync
     cloudflare:
       proxied: false
       secretName: cloudflare-api-token-secret
