--- a/infrastructure/sealed-secrets/sealed-secrets.yaml
+++ b/infrastructure/sealed-secrets/sealed-secrets.yaml
@@ -1,10 +1,25 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: sealed-secrets
+  namespace: sealed-secrets
+spec:
+  interval: 1h
+  url: https://bitnami-labs.github.io/sealed-secrets
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: sealed-secrets
   namespace: sealed-secrets
 spec:
+  interval: 1h
   chart:
-    repository: https://bitnami-labs.github.io/sealed-secrets
-    name: sealed-secrets
-    version: 1.13.2-r2
+    spec:
+      chart: sealed-secrets
+      version: '1.13.2-r2'
+      sourceRef:
+        kind: HelmRepository
+        name: sealed-secrets
+        namespace: sealed-secrets
+      interval: 1h
