--- a/infrastructure/dns/cert-manager/cert-manager.yaml
+++ b/infrastructure/dns/cert-manager/cert-manager.yaml
@@ -1,14 +1,30 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: cert-manager
+  namespace: dns
+spec:
+  interval: 1h
+  url: https://charts.jetstack.io
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: cert-manager
   namespace: dns
 spec:
+  interval: 1h
   chart:
-    repository: https://charts.jetstack.io
-    name: cert-manager
-    version: 1.0.4
+    spec:
+      chart: cert-manager
+      version: '1.0.4'
+      sourceRef:
+        kind: HelmRepository
+        name: cert-manager
+        namespace: dns
+      interval: 1h
   values:
     webhook:
       enabled: true
     installCRDs: true
+
