--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -1,13 +1,28 @@
-apiVersion: helm.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
+metadata:
+  name: external-dns     
+  namespace: dns
+spec:
+  interval: 1h
+  url: https://charts.bitnami.com/bitnami
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: external-dns
   namespace: dns
 spec:
+  interval: 1h
   chart:
-    repository: https://charts.bitnami.com/bitnami
-    name: external-dns
-    version: 3.5.1
+    spec:
+      chart: external-dns
+      version: '3.5.1'
+      sourceRef:
+        kind: HelmRepository
+        name: external-dns
+        namespace: dns
+      interval: 1h
   values:
     sources: 
       - ingress
