--- a/proxy/calibre.yaml
+++ b/proxy/calibre.yaml
@@ -28,6 +28,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/proxy-body-size: "0"
 spec:
   tls:
   - hosts: 
