--- a/jitsi/shared-config.yaml
+++ b/jitsi/shared-config.yaml
@@ -20,3 +20,4 @@ data:
   XMPP_BOSH_URL_BASE: http://127.0.0.1:5280
   ENABLE_RECORDING: "false"
   ENABLE_PREJOIN_PAGE: "true"
+  PUBLIC_URL: https://jitsi.bo0tzz.me/
