--- a/jitsi/shared-config.yaml
+++ b/jitsi/shared-config.yaml
@@ -21,3 +21,4 @@ data:
   ENABLE_RECORDING: "false"
   ENABLE_PREJOIN_PAGE: "true"
   PUBLIC_URL: https://jitsi.bo0tzz.me/
+  ENABLE_XMPP_WEBSOCKET=0
