Revert "Try prosody access via kubernetes service"
This reverts commit c41eb5c5f69cd6ed634c4f400f5f42883910e624.

--- a/jitsi/shared-config.yaml
+++ b/jitsi/shared-config.yaml
@@ -17,7 +17,7 @@ data:
   JVB_AUTH_USER: jvb
   JVB_PORT: "30300"
   JVB_BREWERY_MUC: jvbbrewery
-  XMPP_BOSH_URL_BASE: http://prosody:5280
+  XMPP_BOSH_URL_BASE: http://127.0.0.1:5280
   ENABLE_RECORDING: "false"
   ENABLE_PREJOIN_PAGE: "true"
   PUBLIC_URL: https://jitsi.bo0tzz.me/
