Fix DA backend service

--- a/proxy/docassemble.yaml
+++ b/proxy/docassemble.yaml
@@ -40,5 +40,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: da
+          serviceName: docassemble
           servicePort: 80
