--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -26,6 +26,7 @@ spec:
   values:
     sources: 
       - ingress
+    annotationFilter: kubernetes.io/ingress.class in (nginx)
     provider: cloudflare
     policy: sync
     cloudflare:
@@ -40,3 +41,30 @@ spec:
       - da.bo0tzz.me
       - db.bo0tzz.me
       - grocy.bo0tzz.me
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: external-dns-internal
+  namespace: dns
+spec:
+  interval: 1h
+  chart:
+    spec:
+      chart: external-dns
+      version: '5.1.1'
+      sourceRef:
+        kind: HelmRepository
+        name: external-dns
+        namespace: dns
+      interval: 1h
+  values:
+    sources: 
+      - ingress
+    annotationFilter: kubernetes.io/ingress.class in (nginx-internal)
+    provider: cloudflare
+    policy: sync
+    cloudflare:
+      proxied: false
+      secretName: cloudflare-api-token-secret
+
