--- a/infrastructure/sealed-secrets/sealed-secrets.yaml
+++ b/infrastructure/sealed-secrets/sealed-secrets.yaml
@@ -17,7 +17,7 @@ spec:
   chart:
     spec:
       chart: sealed-secrets
-      version: '1.13.2-r2'
+      version: '1.16.1'
       sourceRef:
         kind: HelmRepository
         name: sealed-secrets
