Move ingress manifests away from beta version

--- a/proxy/calibre.yaml
+++ b/proxy/calibre.yaml
@@ -20,7 +20,7 @@ subsets:
     ports:
       - port: 8083
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: calibre
