--- a/proxy/nginx.yaml
+++ b/proxy/nginx.yaml
@@ -136,7 +136,7 @@ spec:
   selector:
     app: db-static
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nginx-web
