--- a/jitsi/service.yaml
+++ b/jitsi/service.yaml
@@ -52,7 +52,7 @@ spec:
   selector:
     k8s-app: jitsi
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: jitsi
