--- a/proxy/docassemble.yaml
+++ b/proxy/docassemble.yaml
@@ -20,7 +20,7 @@ subsets:
     ports:
       - port: 8100
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: docassemble
