--- a/proxy/grocy.yaml
+++ b/proxy/grocy.yaml
@@ -20,7 +20,7 @@ subsets:
     ports:
       - port: 9283
 ---
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grocy
