--- a/jitsi/service.yaml
+++ b/jitsi/service.yaml
@@ -71,5 +71,7 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: web
-          servicePort: http
+          service:
+            name: web
+            port:
+              name: http
