--- a/proxy/grocy.yaml
+++ b/proxy/grocy.yaml
@@ -39,5 +39,7 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: grocy
-          servicePort: 80
+          service:
+            name: grocy
+            port:
+              number: 80
