--- a/proxy/pass.yaml
+++ b/proxy/pass.yaml
@@ -39,5 +39,7 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: pass
-          servicePort: 80
+          service:
+            name: pass
+            port:
+              number: 80
