Add pathType to all ingresses

--- a/jitsi/service.yaml
+++ b/jitsi/service.yaml
@@ -70,6 +70,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: web
