--- a/proxy/grocy.yaml
+++ b/proxy/grocy.yaml
@@ -38,6 +38,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: grocy
