--- a/proxy/docassemble.yaml
+++ b/proxy/docassemble.yaml
@@ -39,6 +39,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: docassemble
