--- a/proxy/nginx.yaml
+++ b/proxy/nginx.yaml
@@ -154,6 +154,7 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
           service:
             name: nginx-web
