--- a/infrastructure/storage/nfs-provisioner.yaml
+++ b/infrastructure/storage/nfs-provisioner.yaml
@@ -1,47 +1,31 @@
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
+apiVersion: source.toolkit.fluxcd.io/v1beta1
+kind: HelmRepository
 metadata:
-  name: nfs-storage
-provisioner: fuseim.pri/ifs # or choose another name, must match deployment's env PROVISIONER_NAME'
-parameters:
-  pathPattern: "${.PVC.namespace}/${.PVC.name}"
-  onDelete: retain
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nfs-client-provisioner
-  labels:
-    app: nfs-client-provisioner
+  name: nfs-provisioner
   namespace: storage
 spec:
-  replicas: 1
-  strategy:
-    type: Recreate
-  selector:
-    matchLabels:
-      app: nfs-client-provisioner
-  template:
-    metadata:
-      labels:
-        app: nfs-client-provisioner
+  interval: 1h
+  url: https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner/
+---
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: nfs-provisioner
+  namespace: storage
+spec:
+  interval: 1h
+  chart:
     spec:
-      serviceAccountName: nfs-client-provisioner
-      containers:
-        - name: nfs-client-provisioner
-          image: registry.kube.bo0tzz.me/nfs-subdir-external-provisioner:latest
-          volumeMounts:
-            - name: nfs-client-root
-              mountPath: /persistentvolumes
-          env:
-            - name: PROVISIONER_NAME
-              value: fuseim.pri/ifs
-            - name: NFS_SERVER
-              value: 192.168.1.2
-            - name: NFS_PATH
-              value: /mnt/user/kube-storage
-      volumes:
-        - name: nfs-client-root
-          nfs:
-            server: 192.168.1.2
-            path: /mnt/user/kube-storage
+      chart: nfs-subdir-external-provisioner
+      version: '4.0.11'
+      sourceRef:
+        kind: HelmRepository
+        name: nfs-provisioner
+        namespace: storage
+      interval: 1h
+  values:
+    nfs:
+      server: 192.168.2.10
+      path: /mnt/user/kube-storage
+    storageClass:
+      defaultClass: true
