Add provisionerName to nfs-prov helm values

--- a/infrastructure/storage/nfs-provisioner.yaml
+++ b/infrastructure/storage/nfs-provisioner.yaml
@@ -29,3 +29,4 @@ spec:
       path: /mnt/user/kube-storage
     storageClass:
       defaultClass: true
+      provisionerName: k8s-sigs.io/nfs-subdir-external-provisioner
