Use existing PVC for jellyfin

--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -43,5 +43,4 @@ spec:
       media:
         enabled: true
         type: pvc
-        accessMode: ReadWriteOnce
-        size: 400G
+        existingClaim: library
