--- a/media/jellyfin.yaml
+++ b/media/jellyfin.yaml
@@ -43,4 +43,4 @@ spec:
       media:
         enabled: true
         type: pvc
-        existingClaim: library
+        existingClaim: video-library
