--- a/media/library.yaml
+++ b/media/library.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: library
+  name: video-library
   namespace: media
 spec:
   storageClassName: manual
@@ -16,11 +16,11 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: library
+  name: video-library
   namespace: media
 spec:
   storageClassName: manual
-  volumeName: library
+  volumeName: video-library
   accessModes:
     - ReadWriteMany
   resources:
