--- a/media/photostructure/service.yaml
+++ b/media/photostructure/service.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: media
 spec:
   ports:
-      port: 80
+    - port: 80
       targetPort: 1787
   selector:
     app: photostructure
