Fix photostructure-config volume namespace

--- a/media/photostructure/volumes.yaml
+++ b/media/photostructure/volumes.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: photostructure-config
+  namespace: media
 spec:
   accessModes:
     - ReadWriteOnce
