Fix photostructure ingress port spec

--- a/media/photostructure/service.yaml
+++ b/media/photostructure/service.yaml
@@ -35,4 +35,4 @@ spec:
               service:
                 name: web
                 port:
-                  name: http
+                  number: 80
