Fix photostructure ingress port spec, again

--- a/media/photostructure/service.yaml
+++ b/media/photostructure/service.yaml
@@ -33,6 +33,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: web
+                name: photostructure
                 port:
                   number: 80
