--- a/media/photostructure/service.yaml
+++ b/media/photostructure/service.yaml
@@ -7,7 +7,8 @@ metadata:
   namespace: media
 spec:
   ports:
-    - port: 80
+    - name: "http"
+      port: 1787
       targetPort: 1787
   selector:
     app: photostructure
@@ -35,4 +36,4 @@ spec:
               service:
                 name: photostructure
                 port:
-                  number: 80
+                  name: http
