--- a/media/photostructure/deployment.yaml
+++ b/media/photostructure/deployment.yaml
@@ -30,7 +30,7 @@ spec:
             claimName: photo-import
       containers:
         - name: photostructure
-          image: photostructure/server
+          image: photostructure/server:1.0.0-beta.9
           ports:
             - containerPort: 1787
           env:
