--- a/media/dashy/config.yaml
+++ b/media/dashy/config.yaml
@@ -11,6 +11,7 @@ data:
       theme: material-dark
       statusCheck: true
       allowConfigEdit: false
+      forceRootFavicon: true
     sections:
       - name: Media
         icon: fas fa-camera-movie
