Change force favicon option to faviconApi: local

--- a/media/dashy/config.yaml
+++ b/media/dashy/config.yaml
@@ -11,7 +11,7 @@ data:
       theme: material-dark
       statusCheck: true
       allowConfigEdit: false
-      forceRootFavicon: true
+      faviconApi: local
     sections:
       - name: Media
         icon: fas fa-camera-movie
