--- a/media/dashy/config.yaml
+++ b/media/dashy/config.yaml
@@ -32,7 +32,7 @@ data:
             description: Movie download management
             icon: favicon
             url: https://radarr.bo0tzz.me/
-          - title: Transmission
+          - title: Qbittorrent
             description: Downloads
             icon: favicon
-            url: https://transmission.bo0tzz.me/
+            url: https://qbittorrent.bo0tzz.me/
