--- a/media/ombi.yaml
+++ b/media/ombi.yaml
@@ -15,6 +15,8 @@ spec:
         namespace: media
       interval: 1h
   values:
+    controller:
+      replicas: 0
     ingress:
       enabled: true
       annotations:
