--- a/infrastructure/dns/external-dns/external-dns.yaml
+++ b/infrastructure/dns/external-dns/external-dns.yaml
@@ -41,6 +41,7 @@ spec:
       - da.bo0tzz.me
       - db.bo0tzz.me
       - grocy.bo0tzz.me
+      - cloud.dakengeenknaken.nl
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
