Temporarily disable cron job

--- a/nextcloud/nextcloud.yaml
+++ b/nextcloud/nextcloud.yaml
@@ -63,7 +63,7 @@ spec:
       existingSecret: nextcloud-redis
       existingSecretPasswordKey: redis-password
     cronjob:
-      enabled: true
+      enabled: false
     persistence:
       enabled: true
       size: 64Gi
