Add startup probe to let nextcloud set itself up

--- a/nextcloud/nextcloud.yaml
+++ b/nextcloud/nextcloud.yaml
@@ -67,3 +67,6 @@ spec:
     persistence:
       enabled: true
       size: 64Gi
+    startupProbe:
+      enabled: true
+      initialDelaySeconds: 1200
