--- a/nextcloud/nextcloud.yaml
+++ b/nextcloud/nextcloud.yaml
@@ -66,7 +66,7 @@ spec:
       existingSecret: nextcloud-redis
       existingSecretPasswordKey: redis-password
     cronjob:
-      enabled: false
+      enabled: true
     persistence:
       enabled: true
       size: 64Gi
