Fix dashy mountPath

--- a/media/dashy/dashy.yaml
+++ b/media/dashy/dashy.yaml
@@ -26,5 +26,5 @@ spec:
             - containerPort: 80
           volumeMounts:
             - name: config
-              mountPath: /app/public
+              mountPath: /app/public/conf.yml
               subPath: conf.yml
