--- a/spoorkapot/deployment.yaml
+++ b/spoorkapot/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       containers:
         - name: spoorkapot
           image: ghcr.io/bo0tzz/spoorkapot:main
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           envFrom:
