Set recreate strategy for spoorkapot deployment

--- a/spoorkapot/deployment.yaml
+++ b/spoorkapot/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: spoorkapot
     spec:
+      strategy:
+        type: Recreate
       volumes:
         - name: data
           persistentVolumeClaim:
