Quote env var value

--- a/media/youtube-sync.yaml
+++ b/media/youtube-sync.yaml
@@ -28,7 +28,7 @@ spec:
                 - name: DOWNLOAD_FOLDER
                   value: /library
                 - name: DESTRUCTIVE
-                  value: true
+                  value: "true"
 ---
 apiVersion: v1
 kind: PersistentVolume
