--- a/renovate.json
+++ b/renovate.json
@@ -29,6 +29,10 @@
         "docker"
       ],
       "commitMessageExtra": "to {{newVersion}}"
+    },
+    {
+      "matchUpdateTypes": ["patch"],
+      "enabled": false
     }
   ]
 }
