Set namespace on ScheduledBackup object

--- a/database/app-db.yaml
+++ b/database/app-db.yaml
@@ -26,6 +26,7 @@ apiVersion: postgresql.cnpg.io/v1
 kind: ScheduledBackup
 metadata:
   name: daily-backup
+  namespace: database
 spec:
   schedule: "@daily"
   immediate: true
