--- a/database/app-db.yaml
+++ b/database/app-db.yaml
@@ -10,6 +10,7 @@ spec:
     storageClass: local-path
     size: 10Gi
 
+  # Note: May want to set a retention policy https://cloudnative-pg.io/documentation/1.15.0/backup_recovery/#retention-policies
   backup:
     barmanObjectStore:
       destinationPath: s3://app-db-backup/
