--- a/database/ext-postgres-operator/rbac.yaml
+++ b/database/ext-postgres-operator/rbac.yaml
@@ -46,6 +46,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: ext-postgres-operator
+  namespace: database
 roleRef:
   kind: ClusterRole
   name: ext-postgres-operator
