Set POSTGRES_URI_ARGS env var

--- a/database/ext-postgres-operator/operator.yaml
+++ b/database/ext-postgres-operator/operator.yaml
@@ -41,3 +41,5 @@ spec:
                 secretKeyRef:
                   name: app-db-superuser
                   key: password
+            - name: POSTGRES_URI_ARGS
+              value: ""
